[tool.poetry]
name = "app"
version = "0.1.0"
description = "example flask app"
authors = ["EnigmaCurry <ryan@enigmacurry.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gunicorn = "^20.1.0"
flask = "^2.3.2"
psycopg2 = "^2.9.5"
blinker = "^1.6.2"
certifi = "^2023.7.22"
charset-normalizer = "^3.2.0"
click = "^8.1.6"
docopt = "^0.6.2"
Flask-HTTPAuth = "^4.8.0"
idna = "^3.4"
itsdangerous = "^2.1.2"
Jinja2 = "^3.1.2"
Markdown = "^3.4.4"
MarkupSafe = "^2.1.3"
Pillow = "^10.0.0"
pipreqs = "^0.4.13"
pymdown-extensions = "^10.1"
python-frontmatter = "^1.0.0"
PyYAML = "^6.0.1"
requests = "^2.31.0"
urllib3 = "^2.0.4"
Werkzeug = "^2.3.6"
yarg = "^0.1.9"
aiosql = "^v9.0"
sqlalchemy = "^2.0.19"
pydantic = "^v2.1.1"
flask-pydantic = "^v0.11.0"
WTForms = "^3.0.1"
flask_wtf = "^v1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
