[tool.poetry]
name = "app"
version = "0.1.0"
description = "example flask app"
authors = ["EnigmaCurry <ryan@enigmacurry.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gunicorn = "^20.1.0"
flask = "^2.2.2"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
